k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - wisecow.<external-ip>.nip.io
      - wisecow.a1b2c3d4-xxxx.elb.amazonaws.com.nip.io
    secretName: wisecow-tls
  rules:
  - host: wisecow.a1b2c3d4-xxxx.elb.amazonaws.com.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wisecow-service
            port:
              number: 80
